20211101 added components modal and tabs; added gutenberg blocks; removed "cs__" prefix

--- a/assets/css/source/admin.scss
+++ b/assets/css/source/admin.scss
@@ -1,3 +1,18 @@
+//*** Base styling ***//
+$html_fontSize: 16px;
+
+@import 'abstracts/functions';
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
+
+//*** Components ***//
+// @import 'components/tabs';
+
+//*** Layout ***//
+// Section
+// @import 'layout/section/tabs';
+
+
 /*** ACF ***/
 body .acf {
     &-flexible-content .layout {
@@ -66,4 +81,8 @@ body .acf {
             padding: 2px;
         }
     }
+}
+    
+.hide {
+    display: none !important;
 }
