--- a/assets/css/source/base/_typography.scss
+++ b/assets/css/source/base/_typography.scss
@@ -30,7 +30,7 @@ a {
             }
         }
     }
-    &.cs__builtin {
+    &.builtin {
         color: inherit;
         text-decoration: none;
 
