--- a/assets/css/source/layout/_footer.scss
+++ b/assets/css/source/layout/_footer.scss
@@ -2,7 +2,7 @@
  * Footer
  */
 
-.cs__footer {
+.footer {
     background: $dark_gray;
     margin-top: auto; /* sticky footer */
     padding: $gutter 0;
