--- a/assets/css/source/components/_navigation.scss
+++ b/assets/css/source/components/_navigation.scss
@@ -3,7 +3,7 @@
  */
 
 /*** Main menu ***/
-.cs__main-menu {
+.main-menu {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -109,7 +109,7 @@
 
 
 /*** Footer menu ***/
-.cs__footer-menu {
+.footer-menu {
     display: flex;
     flex-flow: row wrap;
     list-style: none;
@@ -174,7 +174,7 @@
 
 
 /*** Social networks menu ***/
-.cs__socials-menu {
+.socials-menu {
     list-style: none;
     margin: 0;
     padding: 0;
