--- a/assets/css/source/global.scss
+++ b/assets/css/source/global.scss
@@ -9,18 +9,19 @@ $html_fontSize: 16px;
 @import 'base/grid';
 @import 'base/base';
 @import 'base/typography';
+// @import 'base/wp-blocks';
 
 
 /************ Vendor styling ************/
 
 
 /************ Components ************/
-@import 'components/accordion';
 @import 'components/animations';
 @import 'components/forms';
+@import 'components/modal';
 @import 'components/navigation';
 @import 'components/pagination';
-@import 'components/popup';
+@import 'components/tabs';
 
 
 /************ Layout ************/
