--- a/assets/css/source/layout/_sections.scss
+++ b/assets/css/source/layout/_sections.scss
@@ -2,7 +2,7 @@
  * Sections
  */
 
-.cs__section {
+.section {
     &__image {
         background-position: 50% 50%;
         background-repeat: no-repeat;
