--- a/assets/css/source/layout/content/_post.scss
+++ b/assets/css/source/layout/content/_post.scss
@@ -2,30 +2,49 @@
  * Content / Post
  */
 
-.cs__post {
-    &__image {
+.post {
+    $c: &;
+
+    &__media-wrap {
         margin: 0 0 25px;
+        overflow: hidden;
+        position: relative;
+
+        &:hover,
+        &:focus {
+            @include mediaMinWidth($mobileBreakpoint){
+                #{$c}__image {
+                    opacity: 0.85;
+                    transform: scale(1.05);
+                }
+            }
+        }
+    }
+    &__image {
+        height: 100%;
         overflow: hidden;
         padding-top: 56.25%;
         position: relative;
-
-        a {
-            background-position: 50% 50%;
-            background-repeat: no-repeat;
-            background-size: cover;
-            display: block;
-            height: 130%;
+        transition: opacity $global_transition, transform $global_transition;
+        z-index: 1;
+        
+        img {
+            height: 100%;
             left: 0;
+            object-fit: cover;
+            object-position: center;
             position: absolute;
-            right: 0;
-            top: -30%;
-            transition: opacity $global_transition, transform $global_transition;
-
-            &:hover {
-                opacity: 0.85;
-                transform: scale(1.05);
-            }
+            top: 0;
+            width: 100%;
         }
+    }
+    &__media-link {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 5;
     }
     &__title {
         margin: 0 0 5px;
