--- a/assets/css/source/global.scss
+++ b/assets/css/source/global.scss
@@ -37,4 +37,5 @@ $html_fontSize: 16px;
 // Templates
 @import 'layout/templates/404';
 @import 'layout/templates/blog';
+@import 'layout/templates/front-page';
 @import 'layout/templates/page';
