--- a/assets/css/source/global.scss
+++ b/assets/css/source/global.scss
@@ -9,7 +9,7 @@ $html_fontSize: 16px;
 @import 'base/grid';
 @import 'base/base';
 @import 'base/typography';
-// @import 'base/wp-blocks';
+@import 'base/wp-blocks';
 
 
 /************ Vendor styling ************/
