--- a/assets/css/source/base/_typography.scss
+++ b/assets/css/source/base/_typography.scss
@@ -120,8 +120,12 @@ h3,.h3,
 h4,.h4,
 h5,.h5,
 h6,.h6 {
-    font-weight: $text-bold;
-    margin: 0 0 $general_margin;
+    &:first-child {
+        margin-top: 0 !important;
+    }
+    &:last-child {
+        margin-bottom: 0 !important;
+    }
 }
 h1,.h1 {
     @include getStylesBreakpoints($h1);
