--- a/assets/css/source/base/_wp-blocks.scss
+++ b/assets/css/source/base/_wp-blocks.scss
@@ -2,8 +2,38 @@
  * WP blocks 
  */
 
+// Colors
+.has-black-background-color {
+    background-color: $black;
+}
+.has-black-color {
+    color: $black;
+}
 
- .wp-block-columns {
+.has-dark-gray-background-color {
+    background-color: $dark_gray;
+}
+.has-dark-gray-color {
+    color: $dark_gray;
+}
+
+.has-light-gray-background-color {
+    background-color: $light_gray;
+}
+.has-light-gray-color {
+    color: $light_gray;
+}
+
+.has-white-background-color {
+    background-color: $white;
+}
+.has-white-color {
+    color: $white;
+}
+
+
+// Columns
+.wp-block-columns {
     margin: 0 #{-$gutter/2};
     
     @include mediaMaxWidth(md){
@@ -18,6 +48,9 @@
         flex: 0 0 100% !important;
     }
 
+    &:empty {
+        display: none !important;
+    }
     &:not(:only-child){
         @include mediaBetween(xs,md){
             flex: 0 0 50% !important;
@@ -29,6 +62,8 @@
     max-width: 100% !important;
 }
 
+
+// Pullquote
 .wp-block-pullquote {
     margin: $general_margin*3 0;
 
@@ -52,8 +87,10 @@
     }
 }
 
+
+// Block quote
 .wp-block-quote {
-    border-left: 10px solid $medium_gray;
+    border-left: 10px solid $general_borderColor;
     margin: $general_margin*3 0 $general_margin*3 48px !important;
     padding: 0 0 0 24px !important;
 
@@ -71,6 +108,8 @@
     }
 }
 
+
+// Embed
 .wp-block-embed {
     margin: $general_margin*3 0;
 
@@ -129,12 +168,16 @@
 	}
 }
 
+
+// Separator
 .wp-block-separator {
     border-color: $general_borderColor;
     border-style: solid;
-    border-width: 2px 0 0 0;
+    border-width: 1px 0 0 0;
 }
 
+
+// Button
 .wp-block-button {
     &__link {
         @extend %btn;
@@ -152,6 +195,8 @@
     }
 }
 
+
+// Table
 .wp-block-table {
     @for $i from 1 through 4 {
         &.column-#{$i}-nowrap {
