--- a/assets/css/source/base/_base.scss
+++ b/assets/css/source/base/_base.scss
@@ -41,7 +41,8 @@ body {
     * {
         outline: none;
     }
-    &.menu-active {
+    &.menu-active,
+    &.modal-active {
         overflow: hidden;
     }
 }
