--- a/assets/css/source/base/_grid.scss
+++ b/assets/css/source/base/_grid.scss
@@ -7,16 +7,27 @@
     flex-flow: row wrap;
     margin-left: auto;
     margin-right: auto;
-    max-width: $containerWidth;
+    max-width: #{$containerWidth};
 
     @include mediaMinWidth($mobileBreakpoint){
-        padding-left: $gutter/2;
-        padding-right: $gutter/2;
+        padding-left: #{$gutter/2};
+        padding-right: #{$gutter/2};
     }
+
+    // @include mediaBetween(xs,md){
+    //     max-width: 700px;
+    // }
+    // @include mediaMaxWidth(xs){
+    //     max-width: 350px;
+    // }
 
     & & {
         padding-left: 0;
         padding-right: 0;
+    }
+    & .col & {
+        margin-left: #{-$gutter/2};
+        margin-right: #{-$gutter/2};
     }
     &--ai-start {
         align-items: flex-start;
