20220309 changed gutenberg color pallete; removed old image sizes and functions

--- a/assets/css/source/abstracts/_variables.scss
+++ b/assets/css/source/abstracts/_variables.scss
@@ -42,8 +42,8 @@ $general_borderColor: darken($light_gray, 5%);
 $general_linkColor: $dark_gray;
 $general_linkColorHover: $black;
 
-$text-normal: 400;
-$text-bold: 700;
+$text_normal: 400;
+$text_bold: 700;
 
 $h1: (
     default: (
