--- a/assets/css/source/base/_typography.scss
+++ b/assets/css/source/base/_typography.scss
@@ -187,7 +187,7 @@ thead, tfoot {
     border: 1px solid $general_borderColor;
     
     th, td {
-        font-weight: $text-bold;
+        font-weight: $text_bold;
         padding: 0.5rem 0.625rem 0.625rem;
         text-align: left;
     }
