--- a/assets/css/source/base/_wp-blocks.scss
+++ b/assets/css/source/base/_wp-blocks.scss
@@ -17,6 +17,13 @@
     color: $dark_gray;
 }
 
+.has-medium-gray-background-color {
+    background-color: $medium_gray;
+}
+.has-medium-gray-color {
+    color: $medium_gray;
+}
+
 .has-light-gray-background-color {
     background-color: $light_gray;
 }
