--- a/assets/css/source/editor.scss
+++ b/assets/css/source/editor.scss
@@ -96,3 +96,40 @@ dl {
         margin: 0 0 0 $general_margin*2;
     }
 }
+
+
+/*** Colors ***/
+.has-black-background-color {
+    background-color: $black;
+}
+.has-black-color {
+    color: $black;
+}
+
+.has-dark-gray-background-color {
+    background-color: $dark_gray;
+}
+.has-dark-gray-color {
+    color: $dark_gray;
+}
+
+.has-medium-gray-background-color {
+    background-color: $medium_gray;
+}
+.has-medium-gray-color {
+    color: $medium_gray;
+}
+
+.has-light-gray-background-color {
+    background-color: $light_gray;
+}
+.has-light-gray-color {
+    color: $light_gray;
+}
+
+.has-white-background-color {
+    background-color: $white;
+}
+.has-white-color {
+    color: $white;
+}
