--- a/assets/css/source/global.scss
+++ b/assets/css/source/global.scss
@@ -16,6 +16,7 @@ $html_fontSize: 16px;
 
 
 /************ Components ************/
+@import 'components/accordion';
 @import 'components/animations';
 @import 'components/forms';
 @import 'components/modal';
