--- a/assets/css/source/editor.scss
+++ b/assets/css/source/editor.scss
@@ -51,22 +51,22 @@ h1, h2, h3, h4, h5, h6 {
         margin-bottom: 0 !important;
     }
 }
-h1 {
+h1, .h1 {
     @include getStylesBreakpoints($h1);
 }
-h2 {
+h2, .h2 {
     @include getStylesBreakpoints($h2);
 }
-h3 {
+h3, .h3 {
     @include getStylesBreakpoints($h3);
 }
-h4 {
+h4, .h4 {
     @include getStylesBreakpoints($h4);
 }
-h5 {
+h5, .h5 {
     @include getStylesBreakpoints($h5);
 }
-h6 {
+h6, .h6 {
     @include getStylesBreakpoints($h6);
 }
 
