--- a/assets/css/source/admin.scss
+++ b/assets/css/source/admin.scss
@@ -96,3 +96,8 @@ body .wp-block:not(.is-selected) .acf-block-component {
 .hide {
     display: none !important;
 }
+
+#wpbody-content #menu-settings-column {
+    position: sticky;
+    top: 30px;
+}
