--- a/assets/css/source/base/_base.scss
+++ b/assets/css/source/base/_base.scss
@@ -57,6 +57,30 @@ body {
         padding-top: map-get($header_height,$mobileBreakpoint);
     }
 
+    .screen-reader-shortcut {
+        position: absolute;
+        top: -1000em;
+
+        &:focus,
+        &:focus-visible {
+            background: #f0f0f1;
+            box-shadow: 0 0 2px 2px rgb(0 0 0 / 60%);
+            color: $black;
+            display: block;
+            font-size: 14px;
+            font-weight: 600;
+            height: auto;
+            left: 6px;
+            line-height: normal;
+            outline-offset: -1px;
+            padding: 15px 23px 14px;
+            text-decoration: none;
+            top: 7px;
+            width: auto;
+            z-index: 100000;
+        }
+    }
+
     body.admin-bar & {
         min-height: calc(100vh - 32px);
 
