--- a/assets/css/source/base/_typography.scss
+++ b/assets/css/source/base/_typography.scss
@@ -43,7 +43,7 @@ a {
     }
 
     &:focus-visible {
-        box-shadow: 0px 0px 0px 2px $white, 0px 0px 0px 4px $dl_purple, 0px 0px 6px 5px rgba($dl_purple, .6);
+        box-shadow: $focus_default;
     }
 }
 hr {
