--- a/assets/css/source/components/_accordion.scss
+++ b/assets/css/source/components/_accordion.scss
@@ -45,7 +45,7 @@
             }
         }
 
-        &--active {
+        &.is-active {
             &::after {
                 opacity: 0;
             }
